--- a/Ropa/Base.lproj/Main.storyboard
+++ b/Ropa/Base.lproj/Main.storyboard
@@ -1296,7 +1296,7 @@
                                 <rect key="frame" x="67" y="72" width="240" height="233"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wEX-8U-5oN">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wEX-8U-5oN">
                                 <rect key="frame" x="67" y="360" width="240" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
@@ -1344,7 +1344,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="vFg-xq-tz7"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Qms-jL-yq8"/>
+                    <navigationItem key="navigationItem" id="Qms-jL-yq8">
+                        <barButtonItem key="rightBarButtonItem" title="刪除帳號" id="xpv-i7-phM">
+                            <connections>
+                                <action selector="deleteButton:" destination="Ity-TA-S66" id="gaV-PY-V70"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="emailLabel" destination="ghf-30-nH2" id="4ix-kq-BAM"/>
                         <outlet property="userNameTextField" destination="wEX-8U-5oN" id="nen-un-vj5"/>
@@ -1352,7 +1358,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aQ1-RR-V6I" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1509.5999999999999" y="3080.5097451274364"/>
+            <point key="canvasLocation" x="2448.8000000000002" y="3080.5097451274364"/>
         </scene>
         <!--Item-->
         <scene sceneID="rq0-L2-CUk">
@@ -1464,6 +1470,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n3N-Y8-QbV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-151.19999999999999" y="3080.5097451274364"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Pv2-Rz-NKE">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OAW-gL-YJA" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="h1T-yq-8gS">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Ity-TA-S66" kind="relationship" relationship="rootViewController" id="er9-FV-aEZ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rc7-Ya-9qL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1509.5999999999999" y="3080.5097451274364"/>
         </scene>
     </scenes>
     <resources>
