修改刪除記錄前

--- a/Ropa/Base.lproj/Main.storyboard
+++ b/Ropa/Base.lproj/Main.storyboard
@@ -1495,6 +1495,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="nlW-Yu-rrn"/>
-        <segue reference="0As-jc-RTj"/>
+        <segue reference="cvO-6X-Afz"/>
     </inferredMetricsTieBreakers>
 </document>
