--- a/Ropa/Base.lproj/Main.storyboard
+++ b/Ropa/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -1209,58 +1210,99 @@
                                     <constraint firstAttribute="width" constant="375" id="HZn-O9-CIs"/>
                                 </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="9D4-oh-zxX">
-                                    <size key="itemSize" width="169" height="225"/>
+                                    <size key="itemSize" width="178" height="225"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="teM-ta-V6q" customClass="ClothesListViewCell" customModule="Ropa" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="169" height="225"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="178" height="225"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="169" height="225"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="178" height="225"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nL6-Yz-d02">
-                                                    <rect key="frame" x="0.0" y="0.0" width="169" height="144"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nL6-Yz-d02">
+                                                    <rect key="frame" x="7" y="7" width="164" height="135"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="135" id="nrY-6r-e7v"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <view tag="200" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BCi-5c-Uk7">
-                                                    <rect key="frame" x="10" y="149" width="25" height="25"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view tag="200" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BCi-5c-Uk7">
+                                                    <rect key="frame" x="18" y="152" width="25" height="25"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="25" id="2SD-f0-URn"/>
+                                                        <constraint firstAttribute="width" secondItem="BCi-5c-Uk7" secondAttribute="height" multiplier="1:1" id="DiW-rd-yt0"/>
+                                                    </constraints>
                                                 </view>
-                                                <view tag="203" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bJW-ut-ygu">
-                                                    <rect key="frame" x="26" y="180" width="25" height="25"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view tag="203" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bJW-ut-ygu">
+                                                    <rect key="frame" x="108" y="152" width="25" height="25"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="25" id="RUL-Qt-B3V"/>
+                                                        <constraint firstAttribute="width" secondItem="bJW-ut-ygu" secondAttribute="height" multiplier="1:1" id="WLc-AZ-Hmq"/>
+                                                    </constraints>
                                                 </view>
-                                                <view tag="204" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yvT-MG-g0H">
-                                                    <rect key="frame" x="63" y="180" width="25" height="25"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view tag="204" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yvT-MG-g0H">
+                                                    <rect key="frame" x="138" y="152" width="25" height="25"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="yvT-MG-g0H" secondAttribute="height" multiplier="1:1" id="UTv-Z9-YWB"/>
+                                                        <constraint firstAttribute="width" constant="25" id="iDq-iU-K58"/>
+                                                    </constraints>
                                                 </view>
-                                                <view tag="201" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aLP-lg-lQM">
-                                                    <rect key="frame" x="42" y="149" width="25" height="25"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view tag="202" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZyZ-jw-VLJ">
+                                                    <rect key="frame" x="78" y="152" width="25" height="25"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="25" id="IRP-sS-0KT"/>
+                                                        <constraint firstAttribute="width" secondItem="ZyZ-jw-VLJ" secondAttribute="height" multiplier="1:1" id="hqO-mO-zAp"/>
+                                                    </constraints>
                                                 </view>
-                                                <view tag="202" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZyZ-jw-VLJ">
-                                                    <rect key="frame" x="74" y="149" width="25" height="25"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="brand" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nzz-6M-cTX">
-                                                    <rect key="frame" x="112" y="169" width="47" height="20"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nzz-6M-cTX">
+                                                    <rect key="frame" x="7" y="187" width="164" height="22.5"/>
+                                                    <attributedString key="attributedText">
+                                                        <fragment content="brand">
+                                                            <attributes>
+                                                                <color key="NSColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                <font key="NSFont" size="17" name="Futura-Bold"/>
+                                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                            </attributes>
+                                                        </fragment>
+                                                    </attributedString>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <view tag="201" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aLP-lg-lQM">
+                                                    <rect key="frame" x="48" y="152" width="25" height="25"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="25" id="oGl-Vx-bEZ"/>
+                                                        <constraint firstAttribute="width" secondItem="aLP-lg-lQM" secondAttribute="height" multiplier="1:1" id="pSo-mz-tCh"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                         </view>
-                                        <size key="customSize" width="169" height="225"/>
+                                        <constraints>
+                                            <constraint firstItem="Nzz-6M-cTX" firstAttribute="leading" secondItem="teM-ta-V6q" secondAttribute="leading" constant="7" id="0Bn-CB-mq9"/>
+                                            <constraint firstItem="yvT-MG-g0H" firstAttribute="top" secondItem="nL6-Yz-d02" secondAttribute="bottom" constant="10" id="0eg-gB-ZVd"/>
+                                            <constraint firstItem="Nzz-6M-cTX" firstAttribute="top" secondItem="BCi-5c-Uk7" secondAttribute="bottom" constant="10" id="4Kk-EK-EAO"/>
+                                            <constraint firstItem="nL6-Yz-d02" firstAttribute="top" secondItem="teM-ta-V6q" secondAttribute="top" constant="7" id="7qN-Qr-AKv"/>
+                                            <constraint firstItem="bJW-ut-ygu" firstAttribute="leading" secondItem="ZyZ-jw-VLJ" secondAttribute="trailing" constant="5" id="861-7O-ZQk"/>
+                                            <constraint firstAttribute="trailing" secondItem="nL6-Yz-d02" secondAttribute="trailing" constant="7" id="9Vp-8c-8Za"/>
+                                            <constraint firstItem="yvT-MG-g0H" firstAttribute="leading" secondItem="bJW-ut-ygu" secondAttribute="trailing" constant="5" id="CGv-JY-akV"/>
+                                            <constraint firstItem="nL6-Yz-d02" firstAttribute="leading" secondItem="teM-ta-V6q" secondAttribute="leading" constant="7" id="Fni-9r-7p0"/>
+                                            <constraint firstItem="aLP-lg-lQM" firstAttribute="leading" secondItem="BCi-5c-Uk7" secondAttribute="trailing" constant="5" id="HJ1-o2-MDA"/>
+                                            <constraint firstItem="aLP-lg-lQM" firstAttribute="top" secondItem="nL6-Yz-d02" secondAttribute="bottom" constant="10" id="Pd9-Wv-ZM9"/>
+                                            <constraint firstItem="BCi-5c-Uk7" firstAttribute="leading" secondItem="teM-ta-V6q" secondAttribute="leadingMargin" constant="10" id="UuB-zg-uLM"/>
+                                            <constraint firstItem="ZyZ-jw-VLJ" firstAttribute="leading" secondItem="aLP-lg-lQM" secondAttribute="trailing" constant="5" id="VCm-k1-KOf"/>
+                                            <constraint firstItem="BCi-5c-Uk7" firstAttribute="top" secondItem="nL6-Yz-d02" secondAttribute="bottom" constant="10" id="WML-gA-Egq"/>
+                                            <constraint firstAttribute="trailing" secondItem="Nzz-6M-cTX" secondAttribute="trailing" constant="7" id="gmg-zN-R29"/>
+                                            <constraint firstItem="ZyZ-jw-VLJ" firstAttribute="top" secondItem="nL6-Yz-d02" secondAttribute="bottom" constant="10" id="sWA-W6-7PW"/>
+                                            <constraint firstItem="bJW-ut-ygu" firstAttribute="top" secondItem="nL6-Yz-d02" secondAttribute="bottom" constant="10" id="xBX-90-24W"/>
+                                        </constraints>
+                                        <size key="customSize" width="178" height="225"/>
                                         <connections>
                                             <outlet property="brandLabel" destination="Nzz-6M-cTX" id="RKf-uV-C1S"/>
                                             <outlet property="fifthView" destination="yvT-MG-g0H" id="gmo-FZ-4lQ"/>
@@ -1316,10 +1358,11 @@
             <objects>
                 <tabBarController storyboardIdentifier="NAVAGATION" automaticallyAdjustsScrollViewInsets="NO" id="rMr-Hz-hkM" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Txm-dL-iQO">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="Txm-dL-iQO">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="3XA-Uc-SZD" kind="relationship" relationship="viewControllers" id="3yD-HQ-PWl"/>
@@ -1332,11 +1375,11 @@
             </objects>
             <point key="canvasLocation" x="-1004" y="583.3583208395803"/>
         </scene>
-        <!--Item-->
+        <!--Clothes-->
         <scene sceneID="wI6-xe-0wu">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="3XA-Uc-SZD" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="zgB-ZM-hPO"/>
+                    <tabBarItem key="tabBarItem" title="Clothes" id="zgB-ZM-hPO"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LRH-wd-dug">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
